--- a/package.json
+++ b/package.json
@@ -13,5 +13,14 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^5.12.13"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lakshayalmadi/Todo-list.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lakshayalmadi/Todo-list/issues"
+  },
+  "homepage": "https://github.com/lakshayalmadi/Todo-list#readme"
 }
